--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
           cache: gradle
 
@@ -41,8 +41,8 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Publish to Maven Local
-        run: ./gradlew publishToMavenLocal
+      - name: Verify Maven Publication
+        run: ./gradlew publish --dry-run
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v3
