--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,13 +1,5 @@
 jdk:
-  - openjdk17
-
+  - openjdk21
 before_install:
-  - chmod +x ./scripts/prepareJitpackEnvironment.sh
-  - ./scripts/prepareJitpackEnvironment.sh
-
-install:
-  - ./gradlew dependencies
-
-script:
-  - ./gradlew clean assemble
-  - ./gradlew publishToMavenLocal
+  - sdk install java 21.0.4-open
+  - sdk use java 21.0.4-open
